--- a/freediscordnitro.html
+++ b/freediscordnitro.html
@@ -22,7 +22,9 @@
 <meta name="twitter:image:src"   content="https://chong130.github.io/test/images/nitrojpg.jpg" />
 <meta property="og:title"        content="藍月なくる New Album 「Indigrotto」" />
 <meta property="og:url"          content="https://nakuruaitsuki.com//" />
-<meta property="og:image"        content="https://nakuruaitsuki.com/images/card.jpg" />
+<!-- <meta property="og:image"        content="https://nakuruaitsuki.com/images/card.jpg" /> -->
+<meta property="og:image"   content="https://chong130.github.io/test/images/nitrojpg.jpg" />
+		
 <!-- <meta property="og:site_name"    content="Indigrotto" /> -->
 <meta property="og:site_name"    content="Discord" />
 <meta property="og:description"  content="寂しさを埋める、あまやかな歌を貴方へ。北川勝利、佐高陵平、Feryquitousほか豪華作曲陣を迎え、優しく、時に激しく物語を彩る全６曲を収録。藍月なくるが贈る「Indigrotto」特設サイト" />
