--- a/meet5.html
+++ b/meet5.html
@@ -11,7 +11,7 @@
         <meta name="robots" content="index,follow"/>
         <title>LettuceMeet - Easy Group Scheduling</title>
         <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet"/>
-        <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png"/>
+<!--         <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png"/>
         <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png"/>
         <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png"/>
         <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png"/>
@@ -23,12 +23,12 @@
         <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png"/>
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png"/>
         <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png"/>
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"/>
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"/> -->
         <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
         <meta name="msapplication-TileColor" content="#ffffff"/>
-        <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png"/>
+<!--         <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png"/> -->
         <meta name="theme-color" content="#ffffff"/>
-        <meta property="og:url" content="https://lettucemeet.com"/>
+<!--         <meta property="og:url" content="https://lettucemeet.com"/> -->
         <meta property="og:title" content="LettuceMeet - Easy Group Scheduling"/>
         <meta property="og:type" content="article"/>
         <meta property="og:description" content="The easiest way to schedule group meetings."/>
