--- a/meet5.html
+++ b/meet5.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <base href="/"/>
+<!--         <base href="/"/> -->
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-title" content="LettuceMeet"/>
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png"/>
         <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png"/>
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png"/> -->
-        <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
+<!--         <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/> -->
         <meta name="msapplication-TileColor" content="#ffffff"/>
 <!--         <meta name="msapplication-TileImage" content="./favicon/ms-icon-144x144.png"/> -->
         <meta name="theme-color" content="#ffffff"/>
