--- a/meet5.html
+++ b/meet5.html
@@ -36,8 +36,8 @@
         <script data-ad-client="ca-pub-3847912259857123" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
         <link rel="stylesheet" href="styles/general.css">
-<!--         <link  rel="stylesheet" href="css/2.97503911.chunk.css">
-        <link  rel="stylesheet" href="css/main.525ce8fe.chunk.css"> -->
+        <link  rel="stylesheet" href="css/2.97503911.chunk.css">
+        <link  rel="stylesheet" href="css/main.525ce8fe.chunk.css">
 <!--          <link  rel="stylesheet" href="./css/2.97503911.chunk.css">
         <link  rel="stylesheet" href="./css/main.525ce8fe.chunk.css"> -->
 <!--          <link  rel="stylesheet" href="//css/2.97503911.chunk.css">
@@ -52,7 +52,7 @@
         <div id="app">
             <div id="page-wrapper"></div>
         </div>
-<!--         <script src="js/2.9bbfc290.chunk.js"></script>
+        <script src="js/2.9bbfc290.chunk.js"></script>
         <script src="js/main.0670f3f4.chunk.js"></script>
         <script>
             !function(e) {
@@ -161,7 +161,7 @@
                 var c = i;
                 r()
             }([])
-        </script> -->
+        </script>
         
     </body>
 </html>
