--- a/templatetest/index.html
+++ b/templatetest/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JavaScript History API: pushState Demo</title>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="templatetest/style.css" />
      </head>
 
 	<body>
@@ -21,6 +21,6 @@
 			</div>
 		</div>
 
-		<script src="js/app.js"></script>
+		<script src="templatetest/app.js"></script>
 	</body>
 </html>
