--- a/bubble/index.html
+++ b/bubble/index.html
@@ -1,5 +1,5 @@
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 
 <body>
